# ChangeLog for genkernel
# Copyright: 
# - 2003-2008 Gentoo Foundation
# - 2008-2011 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  22 Mar 2012; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.26

  16 Mar 2012; Sebastian Pipping <sping@gentoo.org> defaults/initrd.scripts,
  defaults/linuxrc:
  Drop into debug shell when squashfs could not be mounted

  16 Mar 2012; Sebastian Pipping <sping@gentoo.org> defaults/initrd.scripts,
  defaults/linuxrc:
  Drop into debug shell when files could not be copied into tmpfs

  16 Mar 2012; Sebastian Pipping <sping@gentoo.org> defaults/initrd.scripts,
  defaults/linuxrc:
  Improve handling of missing /etc/fstab

  16 Mar 2012; Sebastian Pipping <sping@gentoo.org> defaults/initrd.scripts:
  No longer use parameter "-r" (for regex intervals) that busybox awk does not
  support

  10 Mar 2012; Robin H. Johnson <robbat2@gentoo.org> genkernel:
  Bump version for release.

  25 Feb 2012; Sebastian Pipping <sping@gentoo.org> arch/x86/modules_load,
  arch/x86_64/modules_load, defaults/modules_load:
  Make sure the sha256 module makes it into the initramfs (bug #405495).
  Reported by Ogelpre.

  20 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> defaults/linuxrc:
  With the new /usr mounting, if the device path that ends up in /proc/mounts
  ends up being different than in /etc/fstab due to symlinks, mount -a will
  always exit 32. Avoid by resolving symlinks like util-linux does.

  14 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> gen_compile.sh,
  gen_initramfs.sh:
  dmraid is entirely broken if you try to use the system static
  LVM/device-mapper. Instead start always building LVM2 for the initramfs,
  using DESTDIR for cleaner install. Dead code paths for old LVM2 build not
  removed yet until more users have tested.

  12 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> gen_compile.sh:
  More UTILS_CROSS_COMPILE prefix on strip calls.
